# flights

./: .envrc  .gitignore  CONTEXT.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
docs/: implementation-plan.md
docs/adr/: 0001-handroll-aeroapi-client.md  0002-adaptive-cpa-paced-polling.md  0003-pluggable-data-sources.md  0004-hybrid-flight-detail-model.md  0005-thick-server-rest-split.md  0006-sync-tiny-http-server.md  0007-retained-merged-tracks-with-contact-state.md  0007-webclient-leptos-wasm-over-cors.md  0008-waybar-bar-client.md
flights-api/: Cargo.toml
flights-api/src/: lib.rs
flights-server/: Cargo.toml
flights-server/src/: api.rs  config.rs  domain.rs  geo.rs  http.rs  main.rs  poller.rs  tracker.rs
flights-server/src/sources/: readsb.rs
flights-server/tests/fixtures/: airplanes_live_point.json
flights-tui/: Cargo.toml
flights-tui/src/: client.rs  config.rs  main.rs
flights-tui/src/ui/: app.rs  event.rs  mod.rs  render.rs
flights-waybar/: Cargo.toml
flights-waybar/src/: bar.rs  client.rs  config.rs  main.rs
flights-web/: Cargo.toml  README.md  Trunk.toml  index.html  style.css
flights-web/src/: app.rs  client.rs  config.rs  detail.rs  display.rs  main.rs  panel.rs  radar.rs
scripts/: flights-radar  flights-web
src/: config.rs  domain.rs  main.rs  poller.rs  tracker.rs
src/sources/: mod.rs  readsb.rs
src/ui/: app.rs  event.rs  mod.rs  render.rs
waybar/: flights-nearest.sh
