[workspace]
resolver = "2"
members = ["flights-api", "flights-server", "flights-tui", "flights-waybar", "flights-web"]

# `flights-web` is a wasm32 crate (ADR-0007): it shares this lockfile and the
# `flights-api` path dependency, but it must never enter a host-target build.
# Keeping it out of `default-members` means a bare `cargo build` / `cargo test` /
# `cargo clippy` — and the Nix `buildRustPackage`, which builds the default set —
# touch only the host crates; the webclient is built solely by Trunk for
# `wasm32-unknown-unknown`. Its leptos/wasm deps live in `flights-web/Cargo.toml`,
# not the shared table below, since no host crate shares them.
#
# `flights-waybar`, by contrast, is a host binary (ADR-0008): it *is* in
# `default-members`, so the existing `flights` derivation carries it on PATH next to
# `flights`/`flights-server` — no new derivation, unlike the wasm webclient.
default-members = ["flights-api", "flights-server", "flights-tui", "flights-waybar"]

# Shared metadata and dependency versions, so the crates stay in lockstep
# (ADR-0005: the wire contract is shared, so the two sides must not drift).
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
flights-api = { path = "flights-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }   # rustls+gzip default; sync, no Tokio
tiny_http = "0.12"                              # sync HTTP server (ADR-0006)
ratatui = "0.30"                                # crossterm backend re-exported at ratatui::crossterm
toml = "0.9"
anyhow = "1"                                    # app-level errors
thiserror = "2"                                 # SourceError + config errors

# Size-optimized release binaries (profiles only take effect at the workspace
# root, so the single-crate profile moves here).
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
